plugins {
    id "com.gradleup.shadow" version "8.3.6"
    id 'io.freefair.lombok' version '8.13.1'
}

println """
*******************************************
 You are building SKCraft Launcher! 

 Output files will be in [subproject]/build/libs
*******************************************
"""

subprojects {
    apply plugin: 'java'

    group = 'com.skcraft'
    version = '4.6-SNAPSHOT'

    java {
        toolchain {
            languageVersion.set(JavaLanguageVersion.of(17))
        }
    }

    repositories {
        mavenCentral()
    }

    if (JavaVersion.current().isJava8Compatible()) {
        tasks.withType(Javadoc) {
            options.addStringOption('Xdoclint:none', '-quiet')
        }
    }

    tasks.withType(JavaExec) {
        workingDir = new File(rootDir, "run/")
        workingDir.mkdirs()
    }
}

tasks.register('package') {
    group = 'distribution'
    description = 'Build native launcher installer for the current platform.'
    dependsOn ':launcher-bootstrap:package'
}
